tests/error/comptime/dereference_after_lifetime_end3.bz
function foo(val: [int32]) -> *int32
{
	return &val[0];
}

function test()
{
	(consteval {
		*foo([ 0 ]);
	});
}
